hphp/test/slow/dict/init-parse-error1.php.expectf
Fatal error: An arrow ('=>') is expected here. in %s/test/slow/dict/init-parse-error1.php on line 4